CIV-1197 : updated unit tests for new fact find court finder